--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,10 @@
 {
   "extends": [
     "config:base"
-  ]
+  ],
+  "packageRules": [{
+    "packagePatterns": [".*"],
+    "excludedPackagePatterns": ["$(angular|@angular/.*)$"],
+    "prTitle": "internal only"
+  }]
 }
