--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,7 @@
   ],
   "packageRules": [{
     "packagePatterns": [".*"],
-    "excludedPackageNames": ["angular"],
+    "excludePackageNames": ["angular"],
     "prTitle": "internal only"
   }]
 }
